<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.edu.taruc.lab22profile.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="576dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-238dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_email"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <ImageButton
        android:id="@+id/imageButtonWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/web"
        android:onClick="visitBAIT2073"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_web_black_24dp"
        tools:ignore="RtlHardcoded,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/phone"
        android:onClick="showDial"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonWeb"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_phone_android_black_24px"
        tools:ignore="RtlHardcoded,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/email"
        android:onClick="showSendTo"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonPhone"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_email_black_24dp"
        tools:ignore="ContentDescription,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/home"
        android:onClick="showMain"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_home_black_24dp"
        tools:ignore="ContentDescription,VectorDrawableCompat" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="updateProfile"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
